--- a/download.html
+++ b/download.html
@@ -20,23 +20,35 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="index.html">home</a></li>       
         <li><a href="download.html">download</a></li>
         <li><a href="personal.html">personal</a></li>
-        
       </ul>
     </nav>
   </header>
 
-  <!-- Page Content -->
- 
-  <div class="container">
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2>Computer Science & <br><span>Information of Technology</span></h2>
-  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <article class= "frame-course">
+    <section>
+        <h3>หลักสูตร</h3>
+       <nav>
+        <a href="pdf/2564_CS.pdf" target="iframe">หลักสูตร CS 2564</a> <span id="black">|</span>
+        <a href="pdf/2564_IT.pdf" target="iframe" >หลักสูตร IT 2564</a><span id="black">|</span>
+        <a href="pdf/2564_GenEd.pdf" target="iframe"> วิชาศึกษาทั่วไป 2564</a><span id="black">|</span>
+        <a href="pdf/2564_Sci.pdf" target="iframe">หลักสูตรรายวิชาหมวดวิชาพื้นฐานวิชาชีพ 2564</a>
+       </nav>
+       <iframe name = "iframe" src="pdf/2564_CS.pdf" ></iframe>
+     </section>
+   
+</article>
+
+
+
+
 
   <footer>
     <div class="contact">
@@ -53,9 +65,6 @@
         </ul>
     </div>
 </footer>
-
-  
+    
 </body>
 </html>
-
-
